Bug 461836 - Height/Width percentage values are not formattable
Summary: Height/Width percentage values are not formattable
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.3
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-14 20:04 UTC by Emir SARI
Modified: 2022-11-19 19:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2022-11-14 20:04:00 UTC
There is no way to format the percentage values for the Width and Height values on the main application menu. For instance, Turkish uses number-preceding percentage sign format, not following, but there is no way to set that.
Comment 1 Bug Janitor Service 2022-11-14 20:48:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/yakuake/-/merge_requests/82
Comment 2 Christoph Cullmann 2022-11-19 19:16:30 UTC
Git commit bba7198b5a539a3e058c9e60a38f5fada8e13557 by Christoph Cullmann, on behalf of Nicolas Fella.
Committed on 19/11/2022 at 19:14.
Pushed by cullmann into branch 'master'.

Make percent values translatable

Some languages have a different order of number and percent sign

M  +2    -2    app/mainwindow.cpp

https://invent.kde.org/utilities/yakuake/commit/bba7198b5a539a3e058c9e60a38f5fada8e13557