Make percent values translatable

Some languages have a different order of number and percent sign

BUG: 461836